--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/netinfo": "5.9.6",
+    "apollo-client": "^2.6.3",
+    "aws-amplify": "^3.3.7",
+    "aws-amplify-react-native": "^4.2.9",
+    "aws-appsync": "^4.0.1",
+    "aws-appsync-react": "^4.0.1",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "graphql": "^14.7.0",
+    "graphql-tag": "^2.11.0",
     "react": "16.13.1",
+    "react-apollo": "^2.5.8",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-web": "~0.13.12"
