--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "aws-appsync": "^4.0.1",
     "aws-appsync-react": "^4.0.1",
     "expo": "~39.0.2",
+    "expo-location": "~9.0.0",
     "expo-status-bar": "~1.0.2",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.11.0",
+    "lodash.debounce": "^4.0.8",
     "react": "16.13.1",
     "react-apollo": "^2.5.8",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-maps": "0.27.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
