--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.6",
+    "@react-navigation/bottom-tabs": "^5.11.4",
+    "@react-navigation/native": "^5.9.1",
     "apollo-client": "^2.6.3",
     "aws-amplify": "^3.3.7",
     "aws-amplify-react-native": "^4.2.9",
@@ -25,7 +28,11 @@
     "react-apollo": "^2.5.8",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
